[gd_scene load_steps=5 format=3 uid="uid://uuqlj466fycr"]

[ext_resource type="Script" path="res://Weapons/Turtle/UrsinCanon/Ursin/Ursin.gd" id="1_pgkmf"]
[ext_resource type="Texture2D" uid="uid://ctdv8e4kqbsdr" path="res://Weapons/Turtle/UrsinCanon/Ursin/Ursin.png" id="2_6va65"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lyukq"]
atlas = ExtResource("2_6va65")
region = Rect2(0, 0, 7, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_i8rwc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyukq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Ursin" type="Node2D"]
script = ExtResource("1_pgkmf")

[node name="Ursin" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_i8rwc")

[node name="Spike-N" type="Marker2D" parent="Ursin"]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="SpikesTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpikesTimer" to="." method="_on_spikes_timer_timeout"]
